crates/symbols/src/document/snapshots/symbols__document__tests__enumerate.snap
---
source: crates/symbols/src/document/tests.rs
expression: "document_symbols(&fixture.workspace, document)"
---
[
    Symbol {
        name: "Enumerate",
        kind: Enumeration,
        label: None,
        full_range: 43..184,
        selection_range: 43..184,
        children: [
            Symbol {
                name: "1",
                kind: EnumerationItem,
                label: Some(
                    Span(
                        "it:foo",
                        70..84,
                    ),
                ),
                full_range: 65..88,
                selection_range: 70..84,
                children: [],
            },
            Symbol {
                name: "Item",
                kind: EnumerationItem,
                label: Some(
                    Span(
                        "it:bar",
                        98..112,
                    ),
                ),
                full_range: 93..116,
                selection_range: 98..112,
                children: [],
            },
            Symbol {
                name: "Baz",
                kind: EnumerationItem,
                label: None,
                full_range: 121..135,
                selection_range: 121..135,
                children: [],
            },
            Symbol {
                name: "2",
                kind: EnumerationItem,
                label: Some(
                    Span(
                        "it:qux",
                        150..164,
                    ),
                ),
                full_range: 140..168,
                selection_range: 150..164,
                children: [],
            },
        ],
    },
]
