crates/symbols/src/document/snapshots/symbols__document__tests__equation.snap
---
source: crates/symbols/src/document/tests.rs
expression: "document_symbols(&fixture.workspace, document)"
---
[
    Symbol {
        name: "Equation (1)",
        kind: Equation,
        label: Some(
            Span(
                "eq:foo",
                59..73,
            ),
        ),
        full_range: 43..96,
        selection_range: 59..73,
        children: [],
    },
    Symbol {
        name: "Equation",
        kind: Equation,
        label: Some(
            Span(
                "eq:bar",
                114..128,
            ),
        ),
        full_range: 98..151,
        selection_range: 114..128,
        children: [],
    },
    Symbol {
        name: "Equation",
        kind: Equation,
        label: None,
        full_range: 153..192,
        selection_range: 153..192,
        children: [],
    },
]
