crates/symbols/src/document/snapshots/symbols__document__tests__ignored_patterns.snap
---
source: crates/symbols/src/document/tests.rs
expression: "document_symbols(&fixture.workspace, document)"
---
[
    Symbol {
        name: "Equation",
        kind: Equation,
        label: Some(
            Span(
                "eq:foo",
                59..73,
            ),
        ),
        full_range: 43..96,
        selection_range: 59..73,
        children: [],
    },
]
