crates/symbols/src/document/snapshots/symbols__document__tests__section.snap
---
source: crates/symbols/src/document/tests.rs
expression: "document_symbols(&fixture.workspace, document)"
---
[
    Symbol {
        name: "Foo",
        kind: Section,
        label: None,
        full_range: 43..56,
        selection_range: 43..56,
        children: [],
    },
    Symbol {
        name: "2 Bar",
        kind: Section,
        label: Some(
            Span(
                "sec:bar",
                71..86,
            ),
        ),
        full_range: 58..119,
        selection_range: 71..86,
        children: [
            Symbol {
                name: "Baz",
                kind: Section,
                label: Some(
                    Span(
                        "sec:baz",
                        104..119,
                    ),
                ),
                full_range: 88..119,
                selection_range: 104..119,
                children: [],
            },
        ],
    },
]
