crates/symbols/src/document/snapshots/symbols__document__tests__theorem_thmtools.snap
---
source: crates/symbols/src/document/tests.rs
expression: "document_symbols(&fixture.workspace, document)"
---
[
    Symbol {
        name: "Lemma 1 (Foo)",
        kind: Theorem,
        label: Some(
            Span(
                "thm:foo",
                147..162,
            ),
        ),
        full_range: 129..182,
        selection_range: 147..162,
        children: [],
    },
    Symbol {
        name: "Lemma 2",
        kind: Theorem,
        label: Some(
            Span(
                "thm:bar",
                197..212,
            ),
        ),
        full_range: 184..232,
        selection_range: 197..212,
        children: [],
    },
    Symbol {
        name: "Lemma",
        kind: Theorem,
        label: Some(
            Span(
                "thm:baz",
                247..262,
            ),
        ),
        full_range: 234..282,
        selection_range: 247..262,
        children: [],
    },
    Symbol {
        name: "Lemma (Qux)",
        kind: Theorem,
        label: None,
        full_range: 284..322,
        selection_range: 284..322,
        children: [],
    },
]
